# albatros_motor_board

./: .gitignore  CMakeLists.txt  INFO.TXT  mainpage.dox  manifest.xml  package.xml
cfg/: DynParams.cfg  MotorBoardDynParams.cfg
include/albatros_motor_board/: command_msg.h  commandmsg.h  motor_board_ctrl.h  motorboardctrl.h  serial_comm.h  serialcomm.h
include/albatros_motorboard/: commandmsg.h  motorboardctrl.h  serialcomm.h
launch/: motor_board.launch  motorboard.launch
msg/: MotorSpeeds.msg  MotorSpeedsStamped.msg  MotorStatus.msg  MotorStatusStamped.msg  Pressure.msg  PressureStamped.msg  WaterIn.msg
nodelet/: nodelet_plugins.xml
src/: motor_board_node.cpp  motor_board_node_base (copia)-old2.cpp  motor_board_node_base.cpp  motor_board_node_base.cpp~  motor_board_node_base.h  motor_board_node_base_new.cpp  motor_board_node_base_old.cpp  motor_board_nodelet.cpp  motorboard_node.cpp  motorboard_node_base.cpp  motorboard_node_base.h  motorboard_nodelet.cpp  old_pressure_to_depth.py  pressure_to_depth.py
src/motor_board_console/: CMakeLists.txt  motor_board_console.cpp  simple_shell.cpp  simple_shell.h
src/motor_board_ctrl/: CMakeLists.txt  command_msg.cpp  motor_board_ctrl.cpp  serial_comm.cpp
src/motorboardctrl/: CMakeLists.txt  commandmsg.cpp  motorboardctrl.cpp  serialcomm.cpp
